--- a/docs/source/.special.rst
+++ b/docs/source/.special.rst
@@ -11,7 +11,7 @@
 .. role:: cyan 
 .. role:: white 
 .. role:: black.bold 
-.. role:: red.bold 
+.. role:: red-bold 
 .. role:: green-bold 
 .. role:: yellow.bold 
 .. role:: blue.bold 
